Replaced usage of DatatypeConverter
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>